fix style for expand/collapse/filterbox tables

--- a/public/style.css
+++ b/public/style.css
@@ -213,10 +213,12 @@ DIV#footer {
 
 table#expcol {
 	float:left;
+	width: auto;
 }
 
 table#filterbox {
 	float: left;
+	width: auto;
 }
 
 /*
